tests/src/frontend/typechecking/invalid/unbound_field_promoted.sk
class X(a: Int) {
  fun b(x: X): void {
    x.z
  }

  static fun c(): void {
    void
  }
}
